es-derive2-test/tests/expansion/snapshots/filtered_expansion__event_with_dotted_paths.snap
---
source: es-derive2-test/tests/filtered_expansion.rs
expression: filtered
snapshot_kind: text
---
impl ::es_interface::Event for PaymentProcessed {
    const NAME: ::es_interface::EventName<'static> = ::es_interface::EventName::new(
        "PaymentProcessed",
    );
}
impl ::es_interface::Idempotent for PaymentProcessed
where
    PaymentId: std::fmt::Display,
{
    fn get_idempotency_key(
        &self,
    ) -> Result<::es_interface::IdempotencyKey, ::es_interface::IdempotencyKeyError> {
        let user_parts: Vec<String> = <[_]>::into_vec(
            ::alloc::boxed::box_new([self.payment.id.to_string()]),
        );
        ::es_interface::IdempotencyKey::try_new(
            ::alloc::__export::must_use({
                ::alloc::fmt::format(
                    format_args!("{0}-{1}", "PaymentProcessed", user_parts.join("-")),
                )
            }),
        )
    }
}
impl ::es_interface::Correlated for PaymentProcessed
where
    UserId: std::fmt::Display,
{
    fn get_correlation_id(
        &self,
    ) -> Result<::es_interface::CorrelationId, ::es_interface::CorrelationIdError> {
        let user_parts: Vec<String> = <[_]>::into_vec(
            ::alloc::boxed::box_new([self.user.id.to_string()]),
        );
        ::es_interface::CorrelationId::try_new(
            ::alloc::__export::must_use({
                ::alloc::fmt::format(
                    format_args!("{0}-{1}", "PaymentProcessed", user_parts.join("-")),
                )
            }),
        )
    }
    fn expected_correlation_group_status(
        &self,
    ) -> ::es_interface::ExpectedCorrelationGroupStatus {
        ::es_interface::ExpectedCorrelationGroupStatus::Exists
    }
}
