es-derive2-test/tests/expansion/snapshots/filtered_expansion__register_aggregate_handle.snap
---
source: es-derive2-test/tests/filtered_expansion.rs
expression: filtered
snapshot_kind: text
---
impl AggregateHandle<MyEvent> for MyAggregate {
    type Output = ();
    fn handle(&self, _event: MyEvent) -> Self::Output {}
}
