es-derive2-test/tests/expansion/snapshots/filtered_expansion__register_subscriber_handle.snap
---
source: es-derive2-test/tests/filtered_expansion.rs
expression: filtered
snapshot_kind: text
---
impl SubscriberHandle<MyEvent> for MySubscriber {
    type Output = ();
    async fn handle(&self, _event: MyEvent) -> Result<Self::Output, Report> {
        Ok(())
    }
}
